# PicoSPIBridge

./: .gitignore  README.md
.github/: copilot-instructions.md
docs/: pin-definitions.md
firmware/: CMakeLists.txt
firmware/src/: bridge_config.h  bridge_ring.c  bridge_ring.h  main.c  tusb_config.h  usb_descriptors.c  usb_stream.c
firmware/src/capture/: capture_dma_plan.c  capture_dma_plan.h  spi_capture.c  spi_capture.h  spi_mosi_sniffer.pio
firmware/src/core/: bridge_ring.c
firmware/src/transport/: usb_stream.c  usb_stream.h
firmware/tests/: CMakeLists.txt  bridge_ring_test.c  capture_dma_plan_test.c  spi_capture_compile_test.c  spi_capture_overflow_accounting_test.c  spi_capture_recovery_test.c  tusb.h  usb_stream_test.c
firmware/tests/core/: bridge_ring_test.c
firmware/tests/mocks/: spi_mosi_sniffer.pio.h
firmware/tests/mocks/hardware/: dma.h  gpio.h  irq.h  pio.h  sync.h
firmware/tests/mocks/pico/: stdlib.h
tools/: cdc_rx.py  spi_tx.py
tools/linux/: build.sh  load.sh  test.sh
tools/windows/: Import-VsDevEnvironment.ps1  build.ps1  coverage.ps1  load.ps1  test.ps1
